* 'display_line' new parameter copycoords, when set to "on" will give right clicks on map a prompt of longitude and latitude coordinates
* 'display_line' new parameter markercluster, when set to "on" will cluster closely adjacent markers together.

=== Maps 1.0.5 ===
(2011-11-30)

* Fixed display of attribution control for OpenLayers.
* Fixed to big precision of geographic coordinates in decimal minutes format (bug 32407).

=== Maps 1.0.4 ===
(2011-10-15)

* Updated OpenLayers from 2.10 to 2.11.
* Fixed bug in adding adittional markers for Google Maps v3 (mainly affecting the Semantic Maps form input).

=== Maps 1.0.3 ===
(2011-09-14)

* Added API module for geocoding.
* Added 'geocoding' right.
* Added kmlrezoom parameter for Google Maps v3 and general $egMapsRezoomForKML setting.
* Fixed Google Maps v3 JavaScript issue occuring on MediaWiki 1.17.

=== Maps 1.0.2 ===
(2011-08-24)

* Fixed Google Maps v3 JavaScript issue occuring when using Google Earth on unsupported systems.
* Fixed internationalization of distances (bug 30467).

=== Maps 1.0.1 ===
(2011-08-17)

* Added language parameter to the mapsdoc hook.

* Use of Validator 0.4.10s setMessage method instead of setDescription for better i18n.

* Fixed zoom and types parameters for Google Maps v3.

* Minor improvement to script loading.

* Added support for Google Earth in Google Maps v3.

* Added tilt parameter for Google Earth in Google Maps v3.

=== Maps 1.0 ===
(2011-07-19)

This version branched from Maps 0.7.x at version 0.7.3.

==== New features ====

* Added full Google Maps v3 support and set it as the default mapping service.

* Added new geocoder making use of the new GeoNames API.

* Added support for the auto-documentation features for parser hooks introduced in Validator 0.4.3.

* Added resizeable parameter to all mapping services except OSM.

==== Removed features ====

* Removed compatibility with pre MediaWiki 1.17.

* Removed overlays parameter for Google Maps v2.
